# exchange_calendar_service_updater

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish-rc.yml  publish.yml
docs/: _index.md  basic_usage.md
exchange_calendar_service/updater/: __main__.py  api.py  settings.py  util.py
exchange_calendar_service/updater/provider/: file.py  gh_webhook.py  url.py  util.py
exchange_calendar_service/updater/retry/: exp.py  fixed.py
tests/: test_main.py
tests/provider/: test_file.py  test_gh_webhook.py  test_url.py  test_util.py  util.py
